--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>1.N Título</title>
+    <title>Tienda Online</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -13,10 +13,24 @@
   </head>
 
   <body>
-    <!-- Cambia este HTML por el tuyo -->
-    <header class="header">
-      <h1 class="title">1.N Título</h1>
+    <header class="header">     
     </header>
-    <main class="main"></main>
+    
+    <main class="main">
+      <h1>Tu tienda de productos online</h1>
+
+      <input type="text" id="products" class="products" placeholder="Ej: camiseta">
+      <button>Buscar</button>
+
+      <div class="search-results">
+        <ul class="results-list"> 
+          <li class="result">           
+            <button class="addProduct">Añadir</button>
+          </li>  
+        </ul>
+      </div>
+    </main>
+
+    <script src="./js/main.js"></script>
   </body>
 </html>
