query selectors, global variables and API added in main.js

--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,13 @@
     <main class="main">
       <h1>Tu tienda de productos online</h1>
 
-      <input type="text" id="products" class="products" placeholder="Ej: camiseta">
-      <button>Buscar</button>
+      <input type="text" id="input" class="input js-search-input" placeholder="Ej: camiseta">
+      <button class="searchBtn js-search-btn">Buscar</button>
 
-      <div class="search-results">
-        <ul class="results-list"> 
-          <li class="result">           
-            <button class="addProduct">Añadir</button>
+      <div class="results js-results-container">
+        <ul class="results-list js-results-list"> 
+          <li class="result js-result">           
+            <button class="addProduct js-add-product">Añadir</button>
           </li>  
         </ul>
       </div>
