--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tienda Online</title>
+    <title>Online Store</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
@@ -13,8 +13,7 @@
   </head>
 
   <body>
-    <header class="header">     
-    </header>
+    <header class="header"></header>
     
     <main class="main">
       <h1>Tu tienda de productos online</h1>
@@ -23,10 +22,8 @@
       <button class="searchBtn js-search-btn">Buscar</button>
 
       <div class="results js-results-container">
-        <ul class="results-list js-results-list"> 
-          <li class="result js-result">           
-            <button class="addProduct js-add-product">Añadir</button>
-          </li>  
+        <ul class="results-list js-results-list">
+          
         </ul>
       </div>
     </main>
