product card title fixed

--- a/src/index.html
+++ b/src/index.html
@@ -6,32 +6,32 @@
     <title>Online Store</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="icon" href="/images/favicon.png" />
   </head>
 
   <body>
     <header class="header"></header>
-    
+
     <main class="main">
       <h1>Tu tienda de productos online</h1>
 
-      <input type="text" id="input" class="input js-search-input" placeholder="Ej: camiseta">
+      <input type="text" id="input" class="input js-search-input"
+        placeholder="Ej: camiseta">
       <button class="searchBtn js-search-btn">Buscar</button>
 
       <div class="results js-results-container">
-        <ul class="results-list js-results-list">          
+        <ul class="results-list js-results-list">
         </ul>
-       
+
       </div>
       <aside class="favorites-section">
-            <h2>Mis Favoritos</h2>
-            <div class="favorites-list js_favorites">
-                <!-- Aquí se pintarán los favoritos desde JS -->
-            </div>
-        </aside>
+        <h2>Mis Favoritos</h2>
+        <div class="favorites-list js_favorites">
+          <!-- Aquí se pintarán los favoritos desde JS -->
+        </div>
+      </aside>
     </main>
 
     <script src="./js/main.js"></script>
