--- a/src/index.html
+++ b/src/index.html
@@ -15,24 +15,29 @@
     <header class="header"></header>
 
     <main class="main">
-      <h1>Tu tienda de productos online</h1>
-
-      <input type="text" id="input" class="input js-search-input"
-        placeholder="Ej: camiseta">
-      <button class="searchBtn js-search-btn">Buscar</button>
-
-      <div class="results js-results-container">
-        <ul class="results-list js-results-list">
-        </ul>
-
-      </div>
-      <aside class="favorites-section">
-        <h2>Mis Favoritos</h2>
+    <h1>Tu tienda de productos online</h1>
+    <!-- Carrito a la izquierda -->
+    <aside class="favorites-section">
+        <h2>Mi Carrito</h2>
         <div class="favorites-list js_favorites">
-          <!-- Aquí se pintarán los favoritos desde JS -->
+            <!-- Aquí se pintarán los favoritos desde JS -->
         </div>
-      </aside>
-    </main>
+    </aside>
+    
+
+    <!-- Área de búsqueda y resultados -->
+    <div class="search-area">
+        <input type="text" id="input" class="input js-search-input"
+            placeholder="Busca tu producto...">
+        <button class="searchBtn js-search-btn">Buscar</button>
+
+        <div class="results js-results-container">
+            <ul class="results-list js-results-list">
+            </ul>
+        </div>
+    </div>
+    
+</main>
 
     <script src="./js/main.js"></script>
   </body>
