error message in the search section added

--- a/src/index.html
+++ b/src/index.html
@@ -15,22 +15,18 @@
     <header class="header"></header>
 
     <main class="main">
-    <h1>Tu tienda de productos online</h1>
-    <!-- Carrito a la izquierda -->
-    <aside class="favorites-section">
+    <h1>Tu tienda de productos online</h1>  
+    <aside class="shopping-section">
         <h2>Mi Carrito</h2>
-        <div class="favorites-list js_favorites">
-            <!-- Aquí se pintarán los favoritos desde JS -->
+        <div class="shopping js-shopping-list">           
         </div>
-    </aside>
-    
+    </aside>   
 
-    <!-- Área de búsqueda y resultados -->
+   
     <div class="search-area">
         <input type="text" id="input" class="input js-search-input"
             placeholder="Busca tu producto...">
         <button class="searchBtn js-search-btn">Buscar</button>
-
         <div class="results js-results-container">
             <ul class="results-list js-results-list">
             </ul>
