--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <div class="search-area">
         <input type="text" id="input" class="input js-search-input"
             placeholder="Busca tu producto...">
-        <button class="searchBtn js-search-btn">Buscar</button>
+       <button type="button" class="searchBtn js-search-btn">Buscar</button>
         <div class="results js-results-container">
             <ul class="results-list js-results-list">
             </ul>
