shopping cart code and styles in css added

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <header class="header"></header>
 
     <main class="main">
-    <h1>Tu tienda de productos online</h1>  
+    <h1>Tu tienda de caprichos online</h1>  
     <aside class="shopping-section">
         <h2>Mi Carrito</h2>
         <div class="shopping js-shopping-list">           
