local storage code added

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title>Online Store</title>
     <link
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="icon" href="/images/favicon.png" />
   </head>
@@ -15,25 +16,25 @@
     <header class="header"></header>
 
     <main class="main">
-    <h1>Tu tienda de caprichos online</h1>  
-    <aside class="shopping-section">
+      <h1>Tu tienda de caprichos online</h1>
+      <aside class="shopping-section">
         <h2>Mi Carrito</h2>
-        <div class="shopping js-shopping-list">           
-        </div>
-    </aside>   
+        <div class="shopping js-shopping-list"></div>
+      </aside>
 
-   
-    <div class="search-area">
-        <input type="text" id="input" class="input js-search-input"
-            placeholder="Busca tu producto...">
-       <button type="button" class="searchBtn js-search-btn">Buscar</button>
+      <div class="search-area">
+        <input
+          type="text"
+          id="input"
+          class="input js-search-input"
+          placeholder="Busca tu producto..."
+        />
+        <button type="button" class="searchBtn js-search-btn">Buscar</button>
         <div class="results js-results-container">
-            <ul class="results-list js-results-list">
-            </ul>
+          <ul class="results-list js-results-list"></ul>
         </div>
-    </div>
-    
-</main>
+      </div>
+    </main>
 
     <script src="./js/main.js"></script>
   </body>
