--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./scss/main.scss" />
     <link rel="icon" href="/images/favicon.png" />
   </head>
 
