final version styles added

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./scss/main.scss" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="icon" href="/images/favicon.png" />
   </head>
 
@@ -19,7 +19,7 @@
       <h1>Tu tienda de caprichos online</h1>
       <aside class="shopping-section">
         <h2>Mi Carrito</h2>
-        <div class="shopping js-shopping-list"></div>
+        <div class="shopping-list js-shopping-list"></div>
       </aside>
 
       <div class="search-area">
